Refactor HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@ header{
 }
 header h1{margin:0}
 
-.layout{
-  display:flex;
-  min-height:100vh;
-}
+.layout{display:flex;min-height:100vh}
 
-/* MENÚ ACTOS */
 aside{
   width:280px;
   background:#1f2933;
@@ -42,23 +38,13 @@ aside h2{font-size:18px;margin-top:0}
 .menu-item:hover{background:#4b5563}
 .menu-item.active{background:#0b5d3b}
 
-/* CONTENIDO */
-main{
-  flex:1;
-  padding:25px;
-}
+main{flex:1;padding:25px}
 .seccion{display:none}
 .seccion.active{display:block}
 
-.panel{
-  display:flex;
-  gap:20px;
-}
+.panel{display:flex;gap:20px}
 
-/* LISTA IZQUIERDA */
-.lista{
-  width:40%;
-}
+.lista{width:40%}
 .item{
   background:#fff;
   padding:12px;
@@ -68,10 +54,9 @@ main{
   cursor:pointer;
 }
 .item:hover{background:#f0fdf4}
-.item.parcial{border-color:#f4a261}
+.item.ok{border-color:#2a9d8f}
 .item.no{border-color:#e63946}
 
-/* DETALLE DERECHA */
 .detalle{
   width:60%;
   background:#fff;
@@ -79,10 +64,8 @@ main{
   padding:20px;
   box-shadow:0 2px 6px rgba(0,0,0,.1);
 }
-.detalle h3{margin-top:0}
 
 .ok{color:#2a9d8f;font-weight:bold}
-.parcial{color:#f4a261;font-weight:bold}
 .no{color:#e63946;font-weight:bold}
 
 footer{
@@ -104,85 +87,76 @@ footer{
 
 <aside>
   <h2>Actos Administrativos</h2>
-
-  <div class="menu-item active" onclick="mostrarActo('acto10806')">
-    Acto Adm. 040-ADM2311-10806
+  <div class="menu-item active" onclick="mostrarActo('a10806')">
+    040-ADM2311-10806
   </div>
-
-  <div class="menu-item" onclick="mostrarActo('acto12962')">
-    Acto Adm. 040-ADM2512-12962
+  <div class="menu-item" onclick="mostrarActo('a12962')">
+    040-ADM2512-12962
   </div>
 </aside>
 
 <main>
 
 <!-- ================= ACTO 10806 ================= -->
-<section id="acto10806" class="seccion active">
-  <h2>Acto Adm. 040-ADM2311-10806</h2>
-  <p><strong>Respuesta:</strong> Comunicación 040-COE2403-11349 – 20/03/2024</p>
+<section id="a10806" class="seccion active">
+<h2>Acto Adm. 040-ADM2311-10806</h2>
+<p><strong>Respuesta:</strong> Comunicación 040-COE2403-11349 (20/03/2024)</p>
 
-  <div class="panel">
-    <div class="lista">
+<div class="panel">
+<div class="lista">
+  <div class="item ok" onclick="ver('10806_1')">1. Gestión RESPEL</div>
+  <div class="item ok" onclick="ver('10806_2')">2. Acopio RESPEL</div>
+  <div class="item no" onclick="ver('10806_3')">3. PUEAA 2023</div>
+  <div class="item ok" onclick="ver('10806_4')">4. STARD</div>
+  <div class="item no" onclick="ver('10806_5')">5. Captación aguas</div>
+  <div class="item ok" onclick="ver('10806_6')">6. Protección quebrada</div>
+  <div class="item no" onclick="ver('10806_7')">7. Centro descapote</div>
+  <div class="item ok" onclick="ver('10806_8')">8. Plan forestal</div>
+  <div class="item ok" onclick="ver('10806_9')">9. Tasa forestal</div>
+  <div class="item ok" onclick="ver('10806_10')">10. Impacto reducido</div>
+  <div class="item ok" onclick="ver('10806_11')">11. Salvoconductos</div>
+  <div class="item ok" onclick="ver('10806_12')">12. Residuos bosque</div>
+  <div class="item ok" onclick="ver('10806_13')">13. Quemas</div>
+  <div class="item no" onclick="ver('10806_14')">14. Obras de cauce</div>
+  <div class="item no" onclick="ver('10806_15')">15. Gaviones</div>
+</div>
 
-      <div class="item parcial" onclick="verDetalle('d10806_1')">
-        1. Gestión de residuos peligrosos
-      </div>
-
-      <div class="item no" onclick="verDetalle('d10806_3')">
-        3. Informe PUEAA 2023
-      </div>
-
-      <div class="item parcial" onclick="verDetalle('d10806_4')">
-        4. Instalación del STARD
-      </div>
-
-      <div class="item no" onclick="verDetalle('d10806_5')">
-        5. Captación de aguas concesionadas
-      </div>
-
-    </div>
-
-    <div class="detalle" id="detalle">
-      <h3>Seleccione un requerimiento</h3>
-      <p>Haga clic en un ítem del panel izquierdo para ver el detalle completo.</p>
-    </div>
-  </div>
+<div class="detalle" id="detalle">
+  <h3>Seleccione un requerimiento</h3>
+</div>
+</div>
 </section>
 
 <!-- ================= ACTO 12962 ================= -->
-<section id="acto12962" class="seccion">
-  <h2>Acto Adm. 040-ADM2512-12962</h2>
-  <p><strong>Fecha:</strong> 31/12/2025 – <span class="no">Sin respuesta</span></p>
+<section id="a12962" class="seccion">
+<h2>Acto Adm. 040-ADM2512-12962</h2>
+<p><strong>Fecha:</strong> 31/12/2025 – <span class="no">Sin respuesta</span></p>
 
-  <div class="panel">
-    <div class="lista">
+<div class="panel">
+<div class="lista">
+  <div class="item no" onclick="ver('12962_1')">1. Responder 10806</div>
+  <div class="item no" onclick="ver('12962_2')">2. ICA 2023-2025</div>
+  <div class="item no" onclick="ver('12962_3')">3. RESPEL</div>
+  <div class="item no" onclick="ver('12962_4')">4. PUEAA</div>
+  <div class="item no" onclick="ver('12962_5')">5. Quebrada Santa Inés</div>
+  <div class="item no" onclick="ver('12962_6')">6. Obras de cauce</div>
+  <div class="item no" onclick="ver('12962_7')">7. Calidad del aire</div>
+  <div class="item no" onclick="ver('12962_8')">8. Captación aguas</div>
+  <div class="item no" onclick="ver('12962_9')">9. Gaviones</div>
+  <div class="item no" onclick="ver('12962_10')">10. Canales</div>
+</div>
 
-      <div class="item no" onclick="verDetalle('d12962_1')">
-        1. Informes ICA (2023–2025)
-      </div>
-
-      <div class="item no" onclick="verDetalle('d12962_2')">
-        2. Acopio de residuos peligrosos
-      </div>
-
-      <div class="item no" onclick="verDetalle('d12962_6')">
-        6. Calidad del aire
-      </div>
-
-    </div>
-
-    <div class="detalle" id="detalle">
-      <h3>Seleccione un requerimiento</h3>
-      <p>Todos los requerimientos se encuentran pendientes.</p>
-    </div>
-  </div>
+<div class="detalle" id="detalle">
+  <h3>Seleccione un requerimiento</h3>
+</div>
+</div>
 </section>
 
 </main>
 </div>
 
 <footer>
-  Seguimiento construido con base en actos administrativos e informes técnicos.
+Seguimiento técnico-administrativo – Corantioquia
 </footer>
 
 <script>
@@ -193,75 +167,39 @@ function mostrarActo(id){
   event.target.classList.add('active');
 }
 
-const detalles = {
-  d10806_1: `
-    <h3>1. Gestión de residuos peligrosos</h3>
-    <p>
-    Aclarar mediante los soportes respectivos que certifiquen la debida gestión
-    de los residuos peligrosos, la disposición y/o manejo que se dio a la totalidad
-    de los RESPEL generados entre el año 2022 y el primer periodo del año 2023,
-    indicando las razones por las cuales no se realizó gestión dentro del término
-    máximo permitido por la normativa ambiental vigente.
-    </p>
-    <p><span class="parcial">Respondido parcialmente</span></p>
-  `,
-  d10806_3: `
-    <h3>3. Informe PUEAA 2023</h3>
-    <p>
-    Presentar el informe anual de los avances relacionados con el Programa de Uso
-    Eficiente y Ahorro del Agua – PUEAA y los anexos respectivos para el año 2023.
-    </p>
-    <p><span class="no">Pendiente</span></p>
-  `,
-  d10806_4: `
-    <h3>4. Instalación del STARD</h3>
-    <p>
-    Realizar la adecuación e instalación del STARD aprobado para el manejo de las
-    aguas residuales domésticas del proyecto, garantizando el cumplimiento de los
-    límites máximos permisibles establecidos en la Resolución 631 de 2015.
-    </p>
-    <p><span class="parcial">Respondido parcialmente</span></p>
-  `,
-  d10806_5: `
-    <h3>5. Captación de aguas concesionadas</h3>
-    <p>
-    Realizar la instalación de las unidades de captación, conducción y control
-    de las aguas concesionadas para fines domésticos e industriales derivadas
-    de la quebrada Santa Inés.
-    </p>
-    <p><span class="no">Pendiente</span></p>
-  `,
-  d12962_1: `
-    <h3>1. Informes ICA</h3>
-    <p>
-    Presentar los Informes de Cumplimiento Ambiental – ICA correspondientes
-    al segundo semestre de 2023, año 2024 y primer semestre de 2025 conforme
-    al Manual de Seguimiento Ambiental del Ministerio de Ambiente.
-    </p>
-    <p><span class="no">Pendiente</span></p>
-  `,
-  d12962_2: `
-    <h3>2. Acopio de residuos peligrosos</h3>
-    <p>
-    Adoptar medidas de mejora para garantizar condiciones óptimas de acopio
-    temporal de los residuos peligrosos generados en el proyecto, conforme
-    al PMIRS y la normativa ambiental vigente.
-    </p>
-    <p><span class="no">Pendiente</span></p>
-  `,
-  d12962_6: `
-    <h3>6. Calidad del aire</h3>
-    <p>
-    Realizar la caracterización de la calidad del aire en el área de influencia
-    directa del proyecto minero, conforme a la Resolución 2254 de 2017, incluyendo
-    PM10, PM2.5 y PST.
-    </p>
-    <p><span class="no">Pendiente</span></p>
-  `
+const textos = {
+  /* ==== 10806 ==== */
+  10806_1:`<h3>1. Gestión RESPEL</h3><p>Aclarar mediante soportes la gestión de residuos peligrosos generados entre 2022 y primer periodo 2023.</p><p class="ok">Respondido</p>`,
+  10806_2:`<h3>2. Acopio RESPEL</h3><p>Adoptar medidas para el adecuado acopio temporal de residuos peligrosos conforme al PMIRS.</p><p class="ok">Respondido</p>`,
+  10806_3:`<h3>3. PUEAA 2023</h3><p>Presentar informe anual del PUEAA para el año 2023.</p><p class="no">No respondido</p>`,
+  10806_4:`<h3>4. STARD</h3><p>Adecuar e instalar el STARD aprobado y garantizar límites de vertimiento.</p><p class="ok">Respondido</p>`,
+  10806_5:`<h3>5. Captación de aguas</h3><p>Instalar sistemas de captación de aguas concesionadas.</p><p class="no">No respondido</p>`,
+  10806_6:`<h3>6. Protección quebrada</h3><p>Fortalecer recuperación de retiros de la quebrada Santa Inés.</p><p class="ok">Respondido</p>`,
+  10806_7:`<h3>7. Centro descapote</h3><p>Aclarar vida útil y medidas de recuperación del centro de descapote.</p><p class="no">No respondido</p>`,
+  10806_8:`<h3>8. Plan forestal</h3><p>Cumplir medidas técnicas del plan de aprovechamiento forestal.</p><p class="ok">Respondido</p>`,
+  10806_9:`<h3>9. Tasa forestal</h3><p>Reportar volúmenes para liquidación de tasa compensatoria.</p><p class="ok">Respondido</p>`,
+  10806_10:`<h3>10. Impacto reducido</h3><p>Aplicar principios de extracción de impacto reducido.</p><p class="ok">Respondido</p>`,
+  10806_11:`<h3>11. Salvoconductos</h3><p>Tramitar SUNL en plataforma VITAL.</p><p class="ok">Respondido</p>`,
+  10806_12:`<h3>12. Residuos bosque</h3><p>No disponer residuos peligrosos en el bosque.</p><p class="ok">Respondido</p>`,
+  10806_13:`<h3>13. Quemas</h3><p>No realizar quemas de residuos forestales.</p><p class="ok">Respondido</p>`,
+  10806_14:`<h3>14. Obras de cauce</h3><p>Informar coordenadas y obras definitivas.</p><p class="no">No respondido</p>`,
+  10806_15:`<h3>15. Gaviones</h3><p>Solicitar modificación de permiso de ocupación de cauce.</p><p class="no">No respondido</p>`,
+
+  /* ==== 12962 ==== */
+  12962_1:`<h3>1. Responder 10806</h3><p>Dar respuesta completa a requerimientos pendientes del Acto 10806.</p><p class="no">Pendiente</p>`,
+  12962_2:`<h3>2. ICA</h3><p>Presentar ICA 2023-2025 conforme Manual MADS.</p><p class="no">Pendiente</p>`,
+  12962_3:`<h3>3. RESPEL</h3><p>Mejorar acopio temporal de residuos peligrosos.</p><p class="no">Pendiente</p>`,
+  12962_4:`<h3>4. PUEAA</h3><p>Presentar informes PUEAA 2023-2024.</p><p class="no">Pendiente</p>`,
+  12962_5:`<h3>5. Quebrada Santa Inés</h3><p>Fortalecer recuperación y protección de la fuente hídrica.</p><p class="no">Pendiente</p>`,
+  12962_6:`<h3>6. Obras de cauce</h3><p>Informar coordenadas y características técnicas.</p><p class="no">Pendiente</p>`,
+  12962_7:`<h3>7. Calidad del aire</h3><p>Caracterización conforme Resolución 2254 de 2017.</p><p class="no">Pendiente</p>`,
+  12962_8:`<h3>8. Captación aguas</h3><p>Instalar sistemas de captación concesionada.</p><p class="no">Pendiente</p>`,
+  12962_9:`<h3>9. Gaviones</h3><p>Modificar permiso de ocupación de cauce.</p><p class="no">Pendiente</p>`,
+  12962_10:`<h3>10. Canales</h3><p>Adecuar canales perimetrales faltantes.</p><p class="no">Pendiente</p>`
 };
 
-function verDetalle(id){
-  document.getElementById('detalle').innerHTML = detalles[id];
+function ver(id){
+  document.getElementById('detalle').innerHTML = textos[id];
 }
 </script>
 
